# minimal cmake file for jzon

SET(SOURCES jzon.c jzon.h)

SOURCE_GROUP(jzon FILES ${SOURCES})

add_library(jzon STATIC ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(jzon PUBLIC ${Nebula_SOURCE_DIR}/code/extlibs/jzon-c/)
IF(MSVC)
	SET_PROPERTY(TARGET jzon APPEND PROPERTY COMPILE_FLAGS /wd"4996" )
ENDIF()
SET_TARGET_PROPERTIES(jzon PROPERTIES FOLDER "extlibs")